--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -26,11 +26,180 @@
     "\n",
     "Feel free to work with other people in groups, and ask questions!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>id_</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>race</th>\n",
+       "      <th>income06</th>\n",
+       "      <th>rincom06</th>\n",
+       "      <th>gunlaw</th>\n",
+       "      <th>abany</th>\n",
+       "      <th>owngun</th>\n",
+       "      <th>conrinc</th>\n",
+       "      <th>ballot</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>MALE</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>$75000 TO $89999</td>\n",
+       "      <td>$75000 TO $89999</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>66247.5</td>\n",
+       "      <td>Ballot b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>White</td>\n",
+       "      <td>$15000 TO 17499</td>\n",
+       "      <td>$7 000 TO 7 999</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>6022.5</td>\n",
+       "      <td>Ballot b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>3</td>\n",
+       "      <td>71</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>$20000 TO 22499</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>FAVOR</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>Ballot a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>White</td>\n",
+       "      <td>$8 000 TO 9 999</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>Ballot b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "      <td>78</td>\n",
+       "      <td>FEMALE</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>.d:  Do not Know/Cannot Choose</td>\n",
+       "      <td>.i:  Inapplicable</td>\n",
+       "      <td>FAVOR</td>\n",
+       "      <td>.n:  No answer</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>-100.0</td>\n",
+       "      <td>Ballot c</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  id_ age     sex   race                        income06  \\\n",
+       "0  2010    1  31    MALE  Other                $75000 TO $89999   \n",
+       "1  2010    2  23  FEMALE  White                 $15000 TO 17499   \n",
+       "2  2010    3  71  FEMALE  Black                 $20000 TO 22499   \n",
+       "3  2010    4  82  FEMALE  White                 $8 000 TO 9 999   \n",
+       "4  2010    5  78  FEMALE  Black  .d:  Do not Know/Cannot Choose   \n",
+       "\n",
+       "            rincom06             gunlaw              abany             owngun  \\\n",
+       "0   $75000 TO $89999  .i:  Inapplicable  .i:  Inapplicable  .i:  Inapplicable   \n",
+       "1    $7 000 TO 7 999  .i:  Inapplicable  .i:  Inapplicable  .i:  Inapplicable   \n",
+       "2  .i:  Inapplicable              FAVOR                 NO                 NO   \n",
+       "3  .i:  Inapplicable  .i:  Inapplicable  .i:  Inapplicable  .i:  Inapplicable   \n",
+       "4  .i:  Inapplicable              FAVOR     .n:  No answer                 NO   \n",
+       "\n",
+       "   conrinc    ballot  \n",
+       "0  66247.5  Ballot b  \n",
+       "1   6022.5  Ballot b  \n",
+       "2   -100.0  Ballot a  \n",
+       "3   -100.0  Ballot b  \n",
+       "4   -100.0  Ballot c  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "df = pd.read_excel('GSS.xlsx')\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
