--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -340,6 +340,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The overall log-transformed gift amount shows a right skew distribution which confirms that most foreign gifts are small in value, while a few large donation drive the upper end. This is confirmed in the Kernel Density plot by Gift Type which shows that Real Estate Gifts are the largest and the overlap on Contract and Monetary gifts. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
