Adding work on Part 4 (Numeric Summaries and Viz)

--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -1196,11 +1196,11 @@
         "df.info()"
       ],
       "metadata": {
-        "id": "9uwy8uKPuk0e",
-        "outputId": "625e315e-7cf4-45bd-83c5-dc6203b9d8f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9uwy8uKPuk0e",
+        "outputId": "625e315e-7cf4-45bd-83c5-dc6203b9d8f4"
       },
       "execution_count": 98,
       "outputs": [
@@ -1275,12 +1275,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "EUi692tStWz9",
-        "outputId": "db4e15fe-c9ef-4aeb-e48e-92409a84ce44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 713
-        }
+        },
+        "id": "EUi692tStWz9",
+        "outputId": "db4e15fe-c9ef-4aeb-e48e-92409a84ce44"
       },
       "execution_count": 99,
       "outputs": [
@@ -1330,12 +1330,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "YC_OHYhqyuJI",
-        "outputId": "c49e1509-d032-4415-f2c4-278f376b502c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 509
-        }
+        },
+        "id": "YC_OHYhqyuJI",
+        "outputId": "c49e1509-d032-4415-f2c4-278f376b502c"
       },
       "execution_count": 100,
       "outputs": [
@@ -1401,12 +1401,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "NxF2Kj-p3D41",
-        "outputId": "0a8a0c5e-1e17-45e9-f3b8-97c5bd26472a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 708
-        }
+        },
+        "id": "NxF2Kj-p3D41",
+        "outputId": "0a8a0c5e-1e17-45e9-f3b8-97c5bd26472a"
       },
       "execution_count": 101,
       "outputs": [
@@ -1504,12 +1504,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "YizYjvvS5r34",
-        "outputId": "33c108cb-808c-4fba-f5f3-03899336d350",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 601
-        }
+        },
+        "id": "YizYjvvS5r34",
+        "outputId": "33c108cb-808c-4fba-f5f3-03899336d350"
       },
       "execution_count": 102,
       "outputs": [
@@ -1532,6 +1532,9 @@
         "\n",
         "*   This is very interesting\n",
         "*   Should probably include the exact question in the graph\n",
+        "*   This also includes inapplicable answer so important to also show that 30% in favor for example, does not necessarily mean 70% opposed.\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
