Adding a little more work on part 4

--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -1557,6 +1557,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**RQ4: How do views on abortion differ by attitudes on gun laws?**"
+      ],
+      "metadata": {
+        "id": "-luJr1TTD4QB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Filter data for people who favor gun laws\n",
@@ -1586,12 +1595,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "x29jahnhC9wH",
-        "outputId": "3f4db1d1-daf5-4836-ac8e-e4ea9227b984",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 493
-        }
+        },
+        "id": "x29jahnhC9wH",
+        "outputId": "3f4db1d1-daf5-4836-ac8e-e4ea9227b984"
       },
       "execution_count": 108,
       "outputs": [
@@ -1606,6 +1615,18 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "*   I find this particularly interesting because oppose gun == less government intervention, but those who oppose gun laws are more against abortion (more government intervention)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "gr_KGKp_Dlmg"
+      }
     }
   ],
   "metadata": {
