Part 5 Analysis Complete

--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -1450,14 +1450,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/27/qjg_wpwd1pn4vm80vy6njqmw0000gn/T/ipykernel_8704/1665475972.py:9: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+            "/var/folders/27/qjg_wpwd1pn4vm80vy6njqmw0000gn/T/ipykernel_8704/1245795768.py:7: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
             "  income_counts = df.groupby('income_group')['abany'].value_counts(normalize=True).unstack()\n"
           ]
         },
@@ -1476,15 +1476,12 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Create income groups\n",
         "df['income_group'] = pd.cut(df['conrinc'], bins=[0, 20000, 40000, 60000, 80000, 100000, 150000, np.inf], \n",
         "                            labels=['0-20k', '20-40k', '40-60k', '60-80k', '80-100k', '100-150k', '150k+'])\n",
         "\n",
-        "# Compute proportions by income group\n",
         "income_counts = df.groupby('income_group')['abany'].value_counts(normalize=True).unstack()\n",
         "income_counts = income_counts.reset_index().melt(id_vars='income_group', var_name='abany', value_name='proportion')\n",
         "\n",
-        "# Define custom colors for the bars\n",
         "custom_palette = {\n",
         "    'YES': 'green',\n",
         "    'NO': 'red',\n",
@@ -1493,8 +1490,7 @@
         "    '.i:  Inapplicable': 'purple'\n",
         "}\n",
         "\n",
-        "# Compare abortion opinions by income group\n",
-        "plt.figure(figsize=(16, 8))  # Increase the figure size\n",
+        "plt.figure(figsize=(16, 8))  \n",
         "sns.barplot(data=income_counts, x='income_group', y='proportion', hue='abany', palette=custom_palette)\n",
         "plt.title('Abortion Opinion by Income Group')\n",
         "plt.xlabel('Income Group')\n",
@@ -1506,14 +1502,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/27/qjg_wpwd1pn4vm80vy6njqmw0000gn/T/ipykernel_8704/3480998506.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+            "/var/folders/27/qjg_wpwd1pn4vm80vy6njqmw0000gn/T/ipykernel_8704/671562434.py:1: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
             "  income_gunlaw_counts = df.groupby('income_group')['gunlaw'].value_counts(normalize=True).unstack()\n"
           ]
         },
@@ -1529,11 +1525,9 @@
         }
       ],
       "source": [
-        "# Compute proportions by income group for gun law opinions\n",
         "income_gunlaw_counts = df.groupby('income_group')['gunlaw'].value_counts(normalize=True).unstack()\n",
         "income_gunlaw_counts = income_gunlaw_counts.reset_index().melt(id_vars='income_group', var_name='gunlaw', value_name='proportion')\n",
         "\n",
-        "# Define custom colors for the bars\n",
         "custom_palette = {\n",
         "\t'FAVOR': 'green',\n",
         "\t'OPPOSE': 'red',\n",
@@ -1542,8 +1536,7 @@
         "\t'.i:  Inapplicable': 'purple'\n",
         "}\n",
         "\n",
-        "# Compare gun law opinions by income group\n",
-        "plt.figure(figsize=(16, 8))  # Increase the figure size\n",
+        "plt.figure(figsize=(16, 8)) \n",
         "sns.barplot(data=income_gunlaw_counts, x='income_group', y='proportion', hue='gunlaw', palette=custom_palette)\n",
         "plt.title('Gun Law Opinion by Income Group')\n",
         "plt.xlabel('Income Group')\n",
@@ -1564,27 +1557,48 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "swLoW--z45_b"
-      },
+      "metadata": {},
       "source": [
-        "#### Gun Ownership\n",
+        "#### Gun Ownership and Views on Gun Laws\n",
+        "\n",
         "The analysis of gun ownership in relation to support for stricter gun laws reveals a clear correlation. Among gun owners, 59.9% favor requiring a police permit to purchase a firearm, while 39.2% oppose such a law. In contrast, among non-gun owners, 78.4% favor stricter gun laws, whereas only 19.9% oppose them.\n",
         "\n",
-        "While it is expected that those who own guns are less likely to support gun control measures compared to non-gun owners, it is notable that a majority (nearly 60%) of gun owners still favor such a law. This suggests that while gun ownership influences attitudes toward regulation, it does not necessarily indicate blanket opposition to firearm restrictions. This finding raises further questions about how gun laws are perceived across different political and regional backgrounds, and it would be interesting to compare this data against actual state-level gun permit requirements."
+        "While it is expected that those who own guns are less likely to support gun control measures compared to non-gun owners, it is notable that a majority (nearly 60%) of gun owners still favor such a law. This suggests that while gun ownership influences attitudes toward regulation, it does not necessarily indicate blanket opposition to firearm restrictions. This finding raises further questions about how gun laws are perceived across different political and regional backgrounds, and it would be interesting to compare this data against actual state-level gun permit requirements.\n",
+        "\n",
+        "#### Abortion Opinions by Gender and Age\n",
+        "\n",
+        "When analyzing abortion opinions based on gender, we observe that responses differ between men and women. A higher proportion of men (29.9%) support unrestricted abortion access compared to women (28.6%). Conversely, a higher proportion of women (34.5%) oppose unrestricted abortion access compared to men (33.8%).\n",
+        "\n",
+        "Breaking down abortion opinions by age, we observe an interesting generational trend. Younger respondents (aged 18-30) tend to be more supportive of unrestricted abortion access, while opposition appears to increase with age. The 60+ age group has the highest proportion of individuals opposing abortion rights, suggesting a generational shift in societal views. This trend may reflect broader cultural changes, political shifts, or the influence of historical events that shaped different age groups’ perspectives on reproductive rights.\n",
+        "\n",
+        "#### Abortion Opinions Over Time\n",
+        "\n",
+        "The analysis of abortion opinions over time shows a fluctuating trend. The percentage of people who said \"Yes\" to unrestricted abortion access has varied over the years, with notable peaks and troughs. This indicates that public opinion on abortion is influenced by various factors, including political, social, and economic changes. It would be interesting to further explore the specific events or policies that may have contributed to these fluctuations.\n",
+        "\n",
+        "#### Views on Gun Laws Over Time\n",
+        "\n",
+        "The analysis on views on gun laws over time reveals an increasing trend in support for stricter gun laws up until 2014, followed by a sharp decline in 2016. This decline could be attributed to the political climate at the time, particularly the rise of Trump's presidency. The data suggests that public opinion on gun laws is highly sensitive to political events and leadership.\n",
+        "\n",
+        "#### Abortion Opinions by Attitudes on Gun Laws\n",
+        "\n",
+        "When comparing abortion opinions by attitudes on gun laws, we find an interesting pattern. Among those who favor stricter gun laws, a higher proportion (31.3%) support unrestricted abortion access compared to those who oppose stricter gun laws (24.7%). Conversely, a higher proportion of those who oppose stricter gun laws (38.1%) oppose unrestricted abortion access compared to those who favor stricter gun laws (32.1%).\n",
+        "\n",
+        "This finding is particularly interesting because favoring gun laws is favoring more government intervention, while favoring pro-choice is less government intervention. Conversely, opposing gun laws is favoring less government intervention, but those who oppose gun laws are more against abortion (more government intervention). This suggests a complex relationship between views on different types of government intervention.\n",
+        "\n",
+        "#### Abortion and Gun Law Opinions by Income Group\n",
+        "\n",
+        "The analysis of abortion and gun law opinions by income group reveals that higher income groups tend to be more supportive of both unrestricted abortion access and stricter gun laws. For example, 46.9% of respondents in the highest income group (150k+) support unrestricted abortion access, compared to 27.7% in the lowest income group (0-20k). Similarly, 53.6% of respondents in the highest income group favor stricter gun laws, compared to 48.0% in the lowest income group.\n",
+        "\n",
+        "This suggests that income level may play a significant role in shaping public opinion on both abortion and gun laws. Higher income groups may have different perspectives on government intervention and personal freedoms compared to lower income groups.\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "bej-BBpC45_b"
-      },
+      "metadata": {},
       "source": [
-        "#### Abortion by Gender and Age\n",
+        "### Conclusion\n",
         "\n",
-        "When analyzing abortion opinions based on gender, we observe that responses differ between men and women. COME BACK TO THIS\n",
-        "\n",
-        "Breaking down abortion opinions by age, we observe an interesting generational trend. Younger respondents (aged 18-30) tend to be more supportive of unrestricted abortion access, while opposition appears to increase with age. The 60+ age group has the highest proportion of individuals opposing abortion rights, suggesting a generational shift in societal views. This trend may reflect broader cultural changes, political shifts, or the influence of historical events that shaped different age groups' perspectives on reproductive rights.\n"
+        "The analysis of public opinions on gun laws and abortion rights reveals complex relationships between demographics, political perspectives, and societal influences. While gun ownership tends to correlate with lower support for stricter gun laws, a significant portion of gun owners still favor some regulation. Similarly, views on abortion rights vary by gender, age, and income, with younger and higher-income individuals generally expressing more support for unrestricted access. Furthermore, the intersection of views on gun laws and abortion highlights a nuanced relationship between attitudes toward government intervention. These findings emphasize the importance of considering multiple factors when analyzing public opinion and suggest that perspectives on these issues are shaped by a combination of personal experience, political climate, and broader cultural shifts."
       ]
     }
   ],
