--- a/lab/gss.ipynb
+++ b/lab/gss.ipynb
@@ -1304,7 +1304,6 @@
         "\n",
         "\n",
         "*   This is very interesting\n",
-        "*   Should probably include the exact question in the graph\n",
         "*   This also includes inapplicable answer so important to also show that 30% in favor for example, does not necessarily mean 70% opposed.\n",
         "\n",
         "\n",
@@ -1571,11 +1570,9 @@
         "\n",
         "Breaking down abortion opinions by age, we observe an interesting generational trend. Younger respondents (aged 18-30) tend to be more supportive of unrestricted abortion access, while opposition appears to increase with age. The 60+ age group has the highest proportion of individuals opposing abortion rights, suggesting a generational shift in societal views. This trend may reflect broader cultural changes, political shifts, or the influence of historical events that shaped different age groups’ perspectives on reproductive rights.\n",
         "\n",
-        "#### Abortion Opinions Over Time\n",
+        "#### Opinions Over Time\n",
         "\n",
-        "The analysis of abortion opinions over time shows a fluctuating trend. The percentage of people who said \"Yes\" to unrestricted abortion access has varied over the years, with notable peaks and troughs. This indicates that public opinion on abortion is influenced by various factors, including political, social, and economic changes. It would be interesting to further explore the specific events or policies that may have contributed to these fluctuations.\n",
-        "\n",
-        "#### Views on Gun Laws Over Time\n",
+        "The analysis of abortion opinions over time shows a fluctuating trend but overall increasing trend. The percentage of people who said \"Yes\" to unrestricted abortion access has varied over the years, with notable peaks and troughs. This indicates that public opinion on abortion is influenced by various factors, including political, social, and economic changes. It would be interesting to further explore the specific events or policies that may have contributed to these fluctuations.\n",
         "\n",
         "The analysis on views on gun laws over time reveals an increasing trend in support for stricter gun laws up until 2014, followed by a sharp decline in 2016. This decline could be attributed to the political climate at the time, particularly the rise of Trump's presidency. The data suggests that public opinion on gun laws is highly sensitive to political events and leadership.\n",
         "\n",
